--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             <td style="vertical-align:top"> Jul 2021 </td>
             <td> 11th Lisbon Machine Learning Summer School (LxMLS - 2021)<br>
               Invited 3-hour Tutorial <br>
-              <i> <strong>Ribeiro, A. H.</strong>, Bareinboim, E.. <a href="https://youtu.be/2zkQjhMiZq4?list=PLQl_xdhSmQegzsLin54NbfePFAuTUEmUj%26t=31">Causal Data Science: An Introduction to Causal Inference and Data-Fusion.</a></i>
+              <i> <strong>Ribeiro, A. H.</strong>, Bareinboim, E.. <a href="https://youtu.be/2zkQjhMiZq4?list=PLQl_xdhSmQegzsLin54NbfePFAuTUEmUj&t=31">Causal Data Science: An Introduction to Causal Inference and Data-Fusion.</a></i>
             </td>
           </tr> 
           
