updating doi links

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                             Sao Paulo, SP, Brazil </span> 
                                             <div class="timeline-body"> 
                                             <Strong>Master's thesis:</Strong> 
-                                            <a class="timeline-link" href="http://dx.doi.org/10.11606/D.45.2014.tde-04082014-163616" target="_blank">Gene expression analysis taking into account measurement errors and application to real data.</a><br>
+                                            <a class="timeline-link" href="https://doi.org/10.11606/D.45.2014.tde-04082014-163616" target="_blank">Gene expression analysis taking into account measurement errors and application to real data.</a><br>
                                             <Strong>Advisor:</Strong> Prof. Roberto Hirata Jr.<br>
                                              </div><!-- /timeline-body -->
                                              </div><!-- /timeline-heading -->
@@ -402,7 +402,7 @@
       <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading2"><Strong>Ribeiro, A. H.</Strong>, Lotufo, P., Fujita, A, Goulart, A., Chor, D., Mill, J. G., Bensenor, I., Santos, I. S. (2017). Association Between Short-Term Systolic Blood Pressure Variability and Carotid Intima-Media Thickness in ELSA-Brasil Baseline.<i> American Journal of Hypertension.</i> 30:954–960. <a href="http://dx.doi.org/10.1093/ajh/hpx076" target="_blank">http://dx.doi.org/10.1093/ajh/hpx076</a> </td>
+            <td class="panel-heading" role="tab" id="heading2"><Strong>Ribeiro, A. H.</Strong>, Lotufo, P., Fujita, A, Goulart, A., Chor, D., Mill, J. G., Bensenor, I., Santos, I. S. (2017). Association Between Short-Term Systolic Blood Pressure Variability and Carotid Intima-Media Thickness in ELSA-Brasil Baseline.<i> American Journal of Hypertension.</i> 30:954–960. <a href="https://doi.org/10.1093/ajh/hpx076" target="_blank">https://doi.org/10.1093/ajh/hpx076</a> </td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2"></a></td>
           </tr> 
         </table>
@@ -416,7 +416,7 @@
        <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading1"><Strong>Ribeiro, A. H.</Strong>,  Soler, J. M. P., Neto, E. C., Fujita, A. (2016). Causal Inference and Structure Learning of Genotype-Phenotype Networks Using Genetic Variation.<i> In Big Data Analytics in Genomics. </i> Springer International Publishing, New York, p. 89-143. <a href="http://dx.doi.org/10.1007/978-3-319-41279-5_3" target="_blank">http://dx.doi.org/10.1007/978-3-319-41279-5_3</a></td>
+            <td class="panel-heading" role="tab" id="heading1"><Strong>Ribeiro, A. H.</Strong>,  Soler, J. M. P., Neto, E. C., Fujita, A. (2016). Causal Inference and Structure Learning of Genotype-Phenotype Networks Using Genetic Variation.<i> In Big Data Analytics in Genomics. </i> Springer International Publishing, New York, p. 89-143. <a href="https://doi.org/10.1007/978-3-319-41279-5_3" target="_blank">https://doi.org/10.1007/978-3-319-41279-5_3</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1"></a></td>
           </tr> 
         </table>
