--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading5a"><Strong>Ribeiro, A. H.</Strong>, Vidal, M. C., Sato, J. R., Fujita A. (2021). Granger Causality among Graphs and Application to Functional Brain Connectivity in Autism Spectrum Disorder.<i> Submitted for Publication.</i></td>
+            <td class="panel-heading" role="tab" id="heading5a"><Strong>Ribeiro, A. H.</Strong>, Vidal, M. C., Sato, J. R., Fujita A. (2021). Granger Causality among Graphs and Application to Functional Brain Connectivity in Autism Spectrum Disorder.<i> Accepted in Entropy (ISSN 1099-4399), Section "Information Theory, Probability and Statistics", Special Issue "Brain Connectivity and Information Theory"</i></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5a" aria-expanded="false" aria-controls="collapse5a"></a></td>
           </tr> 
         </table>
