publication in Entropy

--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@
       <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading5a"><Strong>Ribeiro, A. H.</Strong>, Vidal, M. C., Sato, J. R., Fujita A. (2021). Granger Causality among Graphs and Application to Functional Brain Connectivity in Autism Spectrum Disorder.<i> Accepted in Entropy (ISSN 1099-4399), Section "Information Theory, Probability and Statistics", Special Issue "Brain Connectivity and Information Theory"</i></td>
+            <td class="panel-heading" role="tab" id="heading5a">           
+            <Strong>Ribeiro, A. H.</Strong>, Vidal, M. C., Sato, J. R., Fujita A. (2021). Granger Causality among Graphs and Application to Functional Brain Connectivity in Autism Spectrum Disorder.<i> Entropy.</i> 23(9):1024. <a href="https://mdpi.com/1099-4300/23/9/1204" target="_blank">https://doi.org/10.3390/e23091204</a></td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5a" aria-expanded="false" aria-controls="collapse5a"></a></td>
           </tr> 
         </table>
