--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <li>Causal Inference</li>
                 <li>Deep Learning</li>
                 <li>Structure Learning</li>
-                <li>Statistical Genetics</li>
+                <li>Statistical Genetics and Neuroscience</li>
                 <li>AI in Healthcare </li>
                 <li>Multi-Omics Analysis</li>
               </ul>
