--- a/index.html
+++ b/index.html
@@ -731,8 +731,8 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
           <tr>
             <td style="vertical-align:top"> Dec 2021</td>
             <td>  WHY-21 at NeurIPS 2021 - <a target="_blank" href="https://why21.causalai.net/"> Causal Inference &amp; Machine Learning: Why now? </a> <br>
-              Invited Talk  (Forthcoming) <br>
-              <i> <strong>Ribeiro, A. H.</strong>. Effect Identification in Cluster Causal Diagrams </i>
+              Invited Talk<br>
+              <i> <strong>Ribeiro, A. H.</strong>. <a href="https://neurips.cc/virtual/2021/workshop/21871" download target="_blank">Effect Identification in Cluster Causal Diagrams.</a></i>
             </td>
           </tr> 
         
@@ -748,7 +748,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
             <td style="vertical-align:top"> Nov 2021</td>
             <td> <a target="_blank" href="https://www.oecd.org/sti/inno/aiandtheproductivityofscience-speakers.htm"> OECD workshop on AI and the productivity of science. </a> <br>
               Invited Talk <br>
-              <i> <strong>Ribeiro, A. H.</strong>. Developing causal AI: its importance and an overview. </i>
+              <i> <strong>Ribeiro, A. H.</strong>, Bareinboim, E.. <a href="https://www.youtube.com/watch?v=mGbX28TZvw0&t=13954s" download target="_blank">Developing causal AI: its importance and an overview.</a></i>
             </td>
           </tr> 
           <tr>
