--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading5">Anand, T.*, <Strong>Ribeiro, A. H.*</Strong>, Tian, J. , Bareinboim, E. (2021). Effect Identification in Cluster Causal Diagrams.<i> Columbia CausalAI Laboratory, Technical Report (R-77). </i> <a href="https://causalai.net/r77.pdf" target="_blank">https://causalai.net/r77.pdf</a></td>
+            <td class="panel-heading" role="tab" id="heading5">Anand, T.*, <Strong>Ribeiro, A. H.*</Strong>, Tian, J. , Bareinboim, E. (2021). Effect Identification in Cluster Causal Diagrams.<i> Columbia CausalAI Laboratory. </i> <a href="https://causalai.net/r77.pdf" target="_blank">Technical Report (R-77)</a> arXiv preprint <a target="_blank" href="https://doi.org/10.48550/arXiv.2202.12263"> arXiv:2202.12263</a> </td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5"></a></td>
           </tr> 
         </table>
@@ -727,6 +727,24 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
     <div class="list-info wow fadeInUp">
       
       <table class="table-borderless" style="width:100%">
+
+          <tr>
+            <td style="vertical-align:top"> Mar 2022</td>
+            <td>  <a target="_blank" href="https://www.voices-of-data-science.com/"> Voices of Data Science at UMass Amherst</a> <br>
+              Manning College of Information & Computer Sciences, University of Massachusetts Amherst<br>
+              Invited Talk<br>
+              <i> <strong>Ribeiro, A. H.</strong>.On the Importance of Causal Inference in the Next Generation of Artificial Intelligence.</a></i>
+            </td>
+          </tr> 
+
+          <tr>
+            <td style="vertical-align:top"> Mar 2022</td>
+            <td>  Causal Inference Learning Group <br>
+              Biostatistics Department, Mailman School of Public Health, Columbia University <br>
+              Invited Talk<br>
+              <i> <strong>Ribeiro, A. H.</strong>.Effect Identification in Cluster Causal Diagrams.</a></i>
+            </td>
+          </tr> 
 
           <tr>
             <td style="vertical-align:top"> Dec 2021</td>
