--- a/index.html
+++ b/index.html
@@ -398,11 +398,44 @@
       <h2 class="section-title wow fadeInUp">Publications</h2>
     
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
+
+        <div class="panel panel-default">
+        <table style="width:100%">
+          <tr>
+            <td class="panel-heading" role="tab" id="heading5">Jaber, A.*, <Strong>Ribeiro, A. H.*</Strong>, Zhang, J., Bareinboim, E. (2022). Causal Identification under Markov equivalence:
+Calculus, Algorithm, and Completeness.<i> Columbia CausalAI Laboratory. </i> <a href="https://causalai.net/r86a.pdf" target="_blank">Technical Report (R-86a) </td>
+            <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5"></a></td>
+          </tr> 
+        </table>
+        <div id="collapse5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading5">
+            <div class="panel-body">
+              One common task in many data sciences applications is to answer questions about
+the effect of new interventions, like: what would happen to Y if we make X equal
+to x while observing covariates Z = z?. Formally, this is known as conditional
+effect identification, where the goal is to determine whether a post-interventional
+distribution is computable from the combination of an observational distribution
+and assumptions about the underlying domain represented by a causal diagram.
+A plethora of methods was developed for solving this problem, including the
+celebrated do-calculus [Pearl, 1995]. In practice, these results are not always
+applicable since they require a fully specified causal diagram as input, which is
+usually not available. In this paper, we assume as the input of the task a less
+informative structure known as a partial ancestral graph (PAG), which represents a
+Markov equivalence class of causal diagrams, learnable from observational data.
+We make the following contributions under this relaxed setting. First, we introduce
+a new causal calculus, which subsumes the current state-of-the-art, PAG-calculus.
+Second, we develop an algorithm for conditional effect identification given a PAG
+and prove it to be both sound and complete. In words, failure of the algorithm to
+identify a certain effect implies that this effect is not identifiable by any method.
+Third, we prove the proposed calculus to be complete for the same task.
+            </div>
+          </div>
+       </div>
         
         <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading5">Anand, T.*, <Strong>Ribeiro, A. H.*</Strong>, Tian, J. , Bareinboim, E. (2021). Effect Identification in Cluster Causal Diagrams.<i> Columbia CausalAI Laboratory. </i> <a href="https://causalai.net/r77.pdf" target="_blank">Technical Report (R-77)</a> arXiv preprint <a target="_blank" href="https://doi.org/10.48550/arXiv.2202.12263"> arXiv:2202.12263</a> </td>
+            <td class="panel-heading" role="tab" id="heading5">Anand, T. V.*, <Strong>Ribeiro, A. H.*</Strong>, Tian, J. , Bareinboim, E. (2021). Effect Identification in Cluster Causal Diagrams.<i> Columbia CausalAI Laboratory. </i> <a href="https://causalai.net/r77.pdf" target="_blank">Technical Report (R-77)</a> arXiv preprint <a target="_blank" href="https://doi.org/10.48550/arXiv.2202.12263"> arXiv:2202.12263</a> </td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5"></a></td>
           </tr> 
         </table>
