--- a/index.html
+++ b/index.html
@@ -431,6 +431,15 @@ Third, we prove the proposed calculus to be complete for the same task.
             </div>
           </div>
        </div>
+       
+            <div class="panel panel-default">
+        <table style="width:100%">
+          <tr>
+            <td class="panel-heading" role="tab" id="heading5"><Strong>Ribeiro, A. H.</Strong>, Bareinboim, E. (2022). Causal Inference and Data Fusion: Towards an Accelerated Process of Scientific Discovery.<i> OECD-22. Organisation for Economic Co-operation and Development, Volume “AI and the productivity of science” </i>. forthcoming.<i> Columbia CausalAI Laboratory. </i> <a href="https://causalai.net/r73.pdf" target="_blank">Technical Report (R-73) </td>
+          </tr> 
+        </table>
+       </div>
+
         
         <div class="panel panel-default">
         <table style="width:100%">
