--- a/index.html
+++ b/index.html
@@ -769,13 +769,38 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
     <div class="list-info wow fadeInUp">
       
       <table class="table-borderless" style="width:100%">
+          <tr>
+            <td style="vertical-align:top"> Jul 2022 </td>
+            <td> <a target="_blank" href="http://lxmls.it.pt/2022/index.html#schedule"> 12th Lisbon Machine Learning Summer School (LxMLS - 2022) </a> <br>
+              Invited 3-hour Tutorial <br>
+              <i> <strong>Ribeiro, A. H.</strong>, Bareinboim, E.. Causal Data Science </i>
+            </td>
+          </tr> 
+
+          <tr>
+            <td style="vertical-align:top"> Jun 2022</td>
+            <td> Columbia DSI Scholars - Summer Research Bootcamp 2022<br>
+              Data Science Institute, Columbia University <br>
+              Invited Talk<br>
+              <i> <strong>Ribeiro, A. H.</strong> An Overview on Causal Data Science.</i>
+            </td>
+          </tr> 
+
+          <tr>
+            <td style="vertical-align:top"> May 2022</td>
+            <td>  <a target="_blank" href="https://www.pipges.ufscar.br/seminars/may-27-2022-causal-effect-identification-in-partially-understood-domains-speaker-adele-h-ribeiro-columbia-university">     Interinstitutional Graduate Program in Statistics (PIPGES)</a> <br>
+              Federal University of São Carlos and  University of São Paulo <br>
+              Invited Talk<br>
+              <i> <strong>Ribeiro, A. H.</strong> <a href="https://www.youtube.com/watch?v=Hmk0OTtgzms" download target="_blank">Causal Effect Identification in Partially Understood Domains.              </a></i>
+            </td>
+          </tr> 
 
           <tr>
             <td style="vertical-align:top"> Mar 2022</td>
             <td>  <a target="_blank" href="https://www.voices-of-data-science.com/"> Voices of Data Science at UMass Amherst</a> <br>
               Manning College of Information & Computer Sciences, University of Massachusetts Amherst<br>
               Invited Talk<br>
-              <i> <strong>Ribeiro, A. H.</strong>.On the Importance of Causal Inference in the Next Generation of Artificial Intelligence.</a></i>
+              <i> <strong>Ribeiro, A. H.</strong>. On the Importance of Causal Inference in the Next Generation of Artificial Intelligence.</a></i>
             </td>
           </tr> 
 
