--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
               
                 <p><h4>Adèle Helena Ribeiro</h4>
                 <span>Postdoctoral Researcher</span><br>
-                <span>Causal AI Lab, Columbia University</span><br>
-                <a class="email" href="adele@cs.columbia.edu">adele@cs.columbia.edu</a>
+                <span>Data Science in Biomedicine, Philipps-Universit&auml;t Marburg</span><br>
+                <a class="email" href="adele.ribeiro@uni-marburg.de">adele.ribeiro@uni-marburg.de</a>
              </div>   
           </div> <!-- col-md-4 -->
 
