--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
               
                 <p><h4>Adèle Helena Ribeiro</h4>
                 <span>Postdoctoral Researcher</span><br>
-                <span>Data Science in Biomedicine, Philipps-Universit&auml;t Marburg</span><br>
+                <span>Data Science in Biomedicine</span><br>
+		<span>Philipps-Universit&auml;t Marburg</span><br>
                 <a class="email" href="adele.ribeiro@uni-marburg.de">adele.ribeiro@uni-marburg.de</a>
              </div>   
           </div> <!-- col-md-4 -->
