--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <span>Postdoctoral Researcher</span><br>
                 <span>Data Science in Biomedicine</span><br>
 		<span>Philipps-Universit&auml;t Marburg</span><br>
-                <a class="email" href="adele.ribeiro@uni-marburg.de">adele.ribeiro@uni-marburg.de</a>
+                <a class="email" href="mailto:adele.ribeiro@uni-marburg.de">adele.ribeiro@uni-marburg.de</a>
              </div>   
           </div> <!-- col-md-4 -->
 
