--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ Third, we prove the proposed calculus to be complete for the same task.
         <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading5">Anand, T. V.*, <Strong>Ribeiro, A. H.*</Strong>, Tian, J. , Bareinboim, E. (2021). Effect Identification in Cluster Causal Diagrams.<i> Columbia CausalAI Laboratory. </i> <a href="https://causalai.net/r77.pdf" target="_blank">Technical Report (R-77)</a> arXiv preprint <a target="_blank" href="https://doi.org/10.48550/arXiv.2202.12263"> arXiv:2202.12263</a> </td>
+            <td class="panel-heading" role="tab" id="heading5">Anand, T. V.*, <Strong>Ribeiro, A. H.*</Strong>, Tian, J. , Bareinboim, E. (2021). Causal Effect Identification in Cluster DAGs.<i> Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI-23), to appear. </i> <a href="https://causalai.net/r77.pdf" target="_blank">Technical Report (R-77)</a> arXiv preprint <a target="_blank" href="https://doi.org/10.48550/arXiv.2202.12263"> arXiv:2202.12263</a> </td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5"></a></td>
           </tr> 
         </table>
