--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Adele Ribeiro's Personal Webpage">
-  <meta name="keywords" content="causal inference, CV, data science, AI, healthcare, deep learning, adele, helena, ribeiro">
+  <meta name="keywords" content="causal inference, causality, CV, data science, AI, healthcare, public health, deep learning, adele, helena, ribeiro">
 	<meta name="author" content="Adèle H. Ribeiro">
 
 	<title>Adèle H. Ribeiro</title>
@@ -102,7 +102,7 @@
           <div class="col-md-8 col-md-pull-4">
             <div class="short-info wow fadeInUp" >
               <h3>About me</h3>
-              <p  align="justify"> I am a postdoc in Dominik Heider's research group at Philipps-Universität Marburg, Germany. Previously, I worked with Elias Bareinboim as a postdoc in the Causal AI Lab at Columbia University, USA. My research lies at the intersection of Computer Science, Statistics, and Artificial Intelligence in Healthcare. My efforts are focused on advancing the theory of causal inference and learning for discovering, generalizing, and personalizing cause-effect relationships from multiple observational and experimental data collections. I am also interested in the development and application of machine learning and AI tools equipped with causal and counterfactual reasoning for more fair, explainable, scalable, reliable, and personalized decision-making. I have a particular interest in applications in the Health Sciences and have directed my research towards addressing challenges that emerge in such domains to help bridge the gap between theory and practical applications. </p>
+              <p  align="justify"> I am a postdoc in Dominik Heider's research group at Philipps-Universität Marburg and Heinrich Heine University Düsseldorf, Germany. Previously, I worked with Elias Bareinboim as a postdoc in the Causal AI Lab at Columbia University, USA. My research lies at the intersection of Computer Science, Statistics, and Artificial Intelligence in Healthcare. My efforts are focused on advancing the theory of causal inference and learning for discovering, generalizing, and personalizing cause-effect relationships from multiple observational and experimental data collections. I am also interested in the development and application of machine learning and AI tools equipped with causal and counterfactual reasoning for more fair, explainable, scalable, reliable, and personalized decision-making. I have a particular interest in applications in the Health Sciences and have directed my research towards addressing challenges that emerge in such domains to help bridge the gap between theory and practical applications. </p>
 
             </div>
 
