--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading6">Jaber, A.*, <Strong>Ribeiro, A. H.*</Strong>, Zhang, J., Bareinboim, E. (2022). Causal Identification under Markov equivalence: Calculus, Algorithm, and Completeness.<i> In Proceedings of the 36th Annual Conference on Neural Information Processing Systems (NeurIPS-22).</i> <a href="https://causalai.net/r86a.pdf" target="_blank"> (Preprint) </a></td>
+            <td class="panel-heading" role="tab" id="heading6">Jaber, A.*, <Strong>Ribeiro, A. H.*</Strong>, Zhang, J., Bareinboim, E. (2022). Causal Identification under Markov equivalence: Calculus, Algorithm, and Completeness.<i> In Advances in Neural Information Processing Systems, 35, 3679-3690. (NeurIPS-22).</i> <a href="https://proceedings.neurips.cc/paper_files/paper/2022/hash/17a9ab4190289f0e1504bbb98d1d111a-Abstract-Conference.html" target="_blank"> (Link) </a> -- Highlighted Paper (<2%, out of 10,411).</td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse6" aria-expanded="false" aria-controls="collapse6"></a></td>
           </tr> 
         </table>
