--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading5">Anand, T. V.*, <Strong>Ribeiro, A. H.*</Strong>, Tian, J. , Bareinboim, E. (2023). Causal Effect Identification in Cluster DAGs.<i> In Proceedings of the AAAI Conference on Artificial Intelligence (AAAI-23) </i>, 37(10), 12172-12179. <a href="https://doi.org/10.1609/aaai.v37i10.26435" target="_blank">(Link) </a>  -- Selected for <a href="https://doi.org/10.48448/k4gf-7p67" target="_blank"> Oral Presentation </a> </td>
+            <td class="panel-heading" role="tab" id="heading5">Anand, T. V.*, <Strong>Ribeiro, A. H.*</Strong>, Tian, J. , Bareinboim, E. (2023). Causal Effect Identification in Cluster DAGs.<i> In Proceedings of the AAAI Conference on Artificial Intelligence (AAAI-23) </i>, 37(10), 12172-12179. <a href="https://doi.org/10.1609/aaai.v37i10.26435" target="_blank">https://doi.org/10.1609/aaai.v37i10.26435</a>  -- Selected for <a href="https://doi.org/10.48448/k4gf-7p67" target="_blank"> Oral Presentation </a> </td>
             <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5"></a></td>
           </tr> 
         </table>
