--- a/index.html
+++ b/index.html
@@ -423,7 +423,6 @@
 
 
 
-
 <div class="panel panel-default">
         <table style="width:100%">
           <tr>
@@ -468,7 +467,14 @@ counterfactual inferences about clusters of variables.
 
 
 
-
+        <div class="panel panel-default">
+        <table style="width:100%">
+          <tr>
+            <td class="panel-heading" role="tab" id="heading5">
+		    Mundt, M., Cooper, K.W., Dhami, D.S., <Strong>Ribeiro, A. H.</Strong>, Smith, J.S., Bellot A., Hayes, T. (2023) Continual Causality: A Retrospective of the Inaugural AAAI-23 Bridge Program.<i> Proceedings of The First AAAI Bridge Program on Continual Causality, PMLR 208:1-10 </i>. <a href="https://proceedings.mlr.press/v208/mundt23a.html" target="_blank">(Link)</a></td>
+          </tr> 
+        </table>
+       </div>
 
 		
 
