--- a/index.html
+++ b/index.html
@@ -420,7 +420,16 @@
       <h2 class="section-title wow fadeInUp">Publications</h2>
     
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+		
+      <div class="panel panel-default">
+        <table style="width:100%">
+          <tr>
+            <td class="panel-heading" role="tab" id="heading9">  
 
+		    Meneguitti Dias, F., Ribeiro, E., <Strong>Ribeiro, A.</Strong>, Krieger, J., Antonio Gutierrez, M. (2023). Artificial Intelligence-Driven Screening System for Rapid Image-Based Classification of 12-Lead ECG Exams: A Promising Solution for Emergency Room Prioritization. <i> IEEE Access </i> <a href="https://doi.org/10.1109/ACCESS.2023.3328538" target="_blank">https://doi.org/10.1109/ACCESS.2023.3328538</a></td>
+          </tr> 
+        </table>
+       </div>
 
       <div class="panel panel-default">
         <table style="width:100%">
@@ -428,7 +437,6 @@
             <td class="panel-heading" role="tab" id="heading9">  
 
 	    Tajabadi, M, Grabenhenrich, L., <Strong>Ribeiro, A.</Strong>, Leyer, M., Heider D. (2023). Sharing Data With Shared Benefits: Artificial Intelligence Perspective. <i> J Med Internet Res 2023;25:e47540 </i> <a href="https://www.jmir.org/2023/1/e47540" target="_blank">(Link)</a></td>
-            <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse9" aria-expanded="false" aria-controls="collapse9"></a></td>
           </tr> 
         </table>
        </div>
